--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="#FFFFFF"
     android:padding="16dp">
 
     <TextView
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:paddingBottom="16dp"
         android:text="Calculator"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,17 +25,15 @@
         android:id="@+id/tvSolution"
         android:layout_width="0dp"
         android:layout_height="100dp"
+        android:layout_marginTop="20dp"
         android:gravity="end|center_vertical"
         android:text="0"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="48sp"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMinTextSize="16sp"
-        android:autoSizeMaxTextSize="48sp"
-        android:autoSizeStepGranularity="2sp"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     <TextView
         android:id="@+id/tvResult"
@@ -43,15 +41,12 @@
         android:layout_height="60dp"
         android:gravity="end|bottom"
         android:text=""
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="32sp"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMinTextSize="14sp"
-        android:autoSizeMaxTextSize="32sp"
-        android:autoSizeStepGranularity="2sp"
-        app:layout_constraintTop_toBottomOf="@id/tvSolution"
+        app:layout_constraintBottom_toTopOf="@+id/gridButtons"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvSolution" />
 
     <GridLayout
         android:id="@+id/gridButtons"
@@ -65,14 +60,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <!-- All Buttons Below Use Neumorphic Background -->
 
         <Button
             android:id="@+id/btnClear"
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#A5A5A5"
+            android:background="@drawable/rounded_button_operator"
             android:text="AC"
             android:textColor="#000000"
             android:textSize="20sp" />
@@ -82,8 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#A5A5A5"
+            android:background="@drawable/rounded_button_operator"
             android:text="⌫"
             android:textColor="#000000"
             android:textSize="20sp" />
@@ -93,8 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#A5A5A5"
+            android:background="@drawable/rounded_button_operator"
             android:text="%"
             android:textColor="#000000"
             android:textSize="20sp" />
@@ -104,9 +97,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="@color/oprator_color"
+            android:background="@drawable/rounded_button_operator"
             android:text="÷"
+
             android:textColor="#000000"
             android:textSize="20sp" />
 
@@ -115,10 +108,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="7"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -126,10 +118,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="8"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -137,10 +128,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="9"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -148,8 +138,7 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="@color/oprator_color"
+            android:background="@drawable/rounded_button_operator"
             android:text="x"
             android:textColor="#000000"
             android:textSize="20sp" />
@@ -159,10 +148,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="4"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -170,10 +158,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="5"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -181,10 +168,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="6"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -192,8 +178,7 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="@color/oprator_color"
+            android:background="@drawable/rounded_button_operator"
             android:text="−"
             android:textColor="#000000"
             android:textSize="20sp" />
@@ -203,10 +188,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="1"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -214,10 +198,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="2"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -225,10 +208,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="3"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -236,8 +218,7 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="@color/oprator_color"
+            android:background="@drawable/rounded_button_operator"
             android:text="+"
             android:textColor="#000000"
             android:textSize="20sp" />
@@ -248,10 +229,9 @@
             android:layout_height="80dp"
             android:layout_columnSpan="2"
             android:layout_columnWeight="2"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="0"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -259,10 +239,9 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="#333333"
+            android:background="@drawable/rounded_button_neumorphic"
             android:text="."
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <Button
@@ -270,8 +249,7 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_columnWeight="1"
-            android:background="@drawable/rounded_button"
-            android:backgroundTint="@color/oprator_color"
+            android:background="@drawable/rounded_button_operator"
             android:text="="
             android:textColor="#000000"
             android:textSize="20sp" />
